--- a/pyproject.toml
+++ b/pyproject.toml
@@ -32,5 +32,8 @@ get-bearer = "get_bearer:main"
 requires = ["hatchling"]
 build-backend = "hatchling.build"
 
+[tool.hatch.build.targets.wheel]
+packages = ["."]
+
 [tool.uv]
 dev-dependencies = []
