--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,3 @@
-# Configuration files containing sensitive information
-config.json
 
 # Security reports and recommendations
 security_recommendations.html
@@ -12,7 +10,25 @@ environment_analysis.log
 # Temporary files
 *.tmp
 *.temp
+
+# Configuration files containing sensitive information
+config.json
+
+
+# Background stdout stderr
 nohup.out
+
+# Agentic AI specific
+.roo/
+.cline/
+.claude/
+.gemini/
+.codex/
+CLAUDE.md		# Claude Code init
+GEMINI.md		# Gemin CLI init
+AGENTS.md		# Codex init
+
+
 
 # macOS specific files
 .DS_Store
@@ -48,12 +64,7 @@ share/python-wheels/
 MANIFEST
 
 # Virtual environments
-.env
-.venv
-env/
 venv/
-ENV/
-env.bak/
 venv.bak/
 
 # IDE specific files
@@ -62,7 +73,6 @@ venv.bak/
 .vscode/extensions.json
 .vscode/.ropeproject
 .idea/
-.roo/
 *.swp
 *.swo
 *~
@@ -77,8 +87,6 @@ cookies_temp/
 browser_data/
 *.webloc
 
-# API key discovery logs
-key_discovery.log
 
 # Test files
 test_*.env
