--- a/config.template.json
+++ b/config.template.json
@@ -10,7 +10,8 @@
     "accept": "application/json, text/plain, */*",
     "accept_language": "en-US,en;q=0.9",
     "accept_encoding": "gzip, deflate, br",
-    "connection": "keep-alive"
+    "connection": "keep-alive",
+    "content_type": "application/json"
   },
   "timeouts": {
     "api_request": 10
